Copyright (c) 2003-2008 Infrae. All rights reserved.
See also LICENSE.txt

SilvaExternalSources changes

  2.1.2 (unreleased):

    Bugs fixed:

     - Support DateTimeFields as parameters (ported from r34104 in trunk)

  2.1.1 (08/05/2009):
  
    Bugs Fixed:
    
      - Code Sources: MultiListField values were being passed to the    
        rendering script as strings instead of lists

  2.1:

    Features Added:

      - added install_codesources function to install codesources
        from the file system.

    Bugs Fixed:

      - english 'translation' was missing.

  2.0.9:

    Bugs Fixed:

      - html entered into parameters is no lounger doubly escaped on
        saving the document.
  
  2.0.7:
  
    Features Added:
        
      - added support for 'elaborate' code sources, that show their
        add/edit form in a pop-up instead of in the kupu
        toolbox. Useful when code sources have a large number of
        variables.

      - component registration now done using Silva 2.0 zcml
        directives SilvaExternalSources no longer works with Silva 1.6
        or lower

    Bugs Fixed:

      - SilvaExternalSources now depends on SilvaDocument (in
        configure.zcml) since attempting to add this product will fail
        if SilvaDocument isn't installed.

      - fixed sql source "show caption" and "show table column
        headings" parameters

      - problem with checkboxfields (checked) when rendering a code
        source

      - #106231 Integer field of Code Sources cannot be empty Empty
        Integer fields now have a value of None

      - #180860 code source parameter ids must be lowercase They can
        now be mixed case.  However, multiple parameters with ids that
        differ only in case aren't supported

  1.5:
    
    Bugs Fixed:

      - the model is available in validate_to_form (when working from kupu)

  1.4

    Features added / bugs fixed: not recorded

  1.3 

    Features added:
